Fix header pos on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body,html {
-    padding-top: 3vh; /*height of the navbar*/
+    padding-top: 28px; /*height of the navbar*/
     overflow-x: hidden;
 }
 h4 {
